# cloud-waste-scanner-community

./: .gitignore  COMMUNITY_BACKLOG_NEXT.md  COMMUNITY_ROADMAP_NEXT.md  COMMUNITY_SCOPE.md  COMMUNITY_SKILLS_COPY_PACK.md  COMMUNITY_SKILLS_INDEX.md  COMMUNITY_SKILLS_STRATEGY.md  Cargo.toml  ENTERPRISE_SCOPE.md  GITHUB_RELEASE_BODY_COMMUNITY_V3_0_0.md  GITHUB_RELEASE_BODY_COMMUNITY_V3_0_0_FINAL.md  GITHUB_RELEASE_BODY_COMMUNITY_V3_0_0_SHORT.md  LEGAL-TRANSITION.md  LICENSE  README.md  RELEASE_NOTES_COMMUNITY_V3_0_0.md  RESULT_HANDOFF_MVP.md  ROADMAP_EXECUTION_V2.md  ROADMAP_WEBSITE_COPY_V2.md  SKILLS_EDITION_MATRIX.md  SKILLS_USAGE_ZH.md  SKILL_MONETIZATION_POLICY.md  SKILL_RUNTIME_MODES.md  STAGE1_EXECUTION_BACKLOG.md  TEAM_CLOSURE_PLAN.md  TEAM_PERMISSIONS_AND_OPERATIONS.md  TEAM_SCOPE.md  TEAM_SKILLS_GAP_ASSESSMENT.md  TEAM_USER_GUIDE.md
.github/: FUNDING.yml
.github/release-notes/: v2.9.15.md  v2.9.17.md  v2.9.18.md  v2.9.19.md  v2.9.23.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: ai_runtime.rs  akamai.rs  alibaba.rs  aws.rs  azure.rs  backblaze.rs  baidu.rs  ceph.rs  civo.rs  cloudflare.rs  cloudian.rs  contabo.rs  db.rs  dell.rs  digitalocean.rs  dreamhost.rs  equinix.rs  exoscale.rs  flashblade.rs  gcore.rs  gcp.rs  generic_s3.rs  greenlake.rs  hcp.rs  hetzner.rs  huawei.rs  ibm.rs  idrive.rs  ionos.rs  k8s.rs  leaseweb.rs  lib.rs  linode.rs  lyve.rs  minio.rs  models.rs  notify.rs  nutanix.rs  openstack.rs  oracle.rs  (+15 more)
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.css  App.tsx  index.css  main.tsx
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: ai_analyst_runtime.rs  aws_utils.rs  db.rs  demo_data.rs  governance_helpers.rs  license.rs  license_runtime.rs  local_api_runtime.rs  main.rs  notification_runtime.rs  proxy_helpers.rs  proxy_runtime.rs  runtime_helpers.rs  scan_runtime.rs  schedule_runtime.rs
gui/src-tauri/windows/nsis/: installer.nsi.template
gui/src/components/: AiAnalystScreen.tsx  AiDeviceScanScreen.tsx  AiSettingsScreen.tsx  CustomSelect.tsx  Dashboard.tsx  ErrorBoundary.tsx  FeedbackManager.tsx  GovernanceScreen.tsx  HistoryScreen.tsx  LicenseScreen.tsx  LogsScreen.tsx  Modal.tsx  MonitorScreen.tsx  ProviderResourcesScreen.tsx  ResourcesTable.tsx  SavingsChart.tsx  ScanWizard.tsx  Settings.tsx  SettingsHubScreen.tsx  Sidebar.tsx  (+2 more)
sdks/: README.md
sdks/python/: README.md
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
skills/cws-export-auditor/: SKILL.md
skills/cws-playbook-writer/: SKILL.md
skills/cws-report-explainer/: SKILL.md
skills/cws-weekly-brief/: SKILL.md
(+44 files in other folders)
