[package]
name = "cloud-waste-scanner-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
url = "2.5"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sha1 = "0.10"
urlencoding = "2.1"
serde-xml-rs = "0.6"
jsonwebtoken = "9.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# AWS SDKs
aws-config = "1.1"
aws-sdk-ec2 = "1.1"
aws-sdk-elasticloadbalancingv2 = "1.1"
aws-sdk-cloudwatch = "1.1"
aws-sdk-rds = "1.1"
aws-sdk-s3 = "1.1"
aws-smithy-types = "1.1"
