[package]
name = "cloud-waste-scanner-gui"
version= "2.9.13"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cloud-waste-scanner-core = { path = "../../core" }
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.0"
aws-sdk-ec2 = "1.0"
aws-sdk-elasticloadbalancingv2 = "1.0"
aws-sdk-cloudwatch = "1.0"
aws-sdk-rds = "1.0"
aws-sdk-s3 = "1.0"

# Pro Features
ed25519-dalek = "2.1"
base64 = "0.22"
chrono = "0.4"
# Removed rusqlite, added sqlx to match core
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
rust-ini = "0.20"
dirs = "5.0"
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "socks"] }
futures-util = "0.3"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["cors"] }
rcgen = "0.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
